2013-03-07 Mario Pulido <mario.pulido@artica.es>

       *images/help/historyddbb.png,images/help/plugin1.png
       images/help/plugin2.png, images/help/plugin3.png
       include/help/es/help_plugin_definition.php
       include/help/es/help_history_database.php
       include/help/en/help_history_database.php
       include/help/en/help_plugin_definition.php: Modified plugin definition help.
       Add history database help.



2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	godmode/agentes/planned_downtime.editor.php, pandoradb.sql,
	pandoradb.postgreSQL.sql: added id_user to planned_downtime table
	for to know who create or updte any downtime.
	
	Fixes: #3607172

2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events.build_table.php: Improve instructions
	in list and details view on agents and fix the bug of doesnt 
	show the owner in the list table when events are grouped. To fix
	it I added a couple of subqueries to the grouped query. Yes, I 
	checked the performance :) Bug: 3607097

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: fixed the apply format to
	numeric value in the max item report.
	
	MERGE FROM THE BRANCH PANDORA_4

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed the get
	modules from items events for reports in metaconsole.
	
	Fixes: #3606284
	
	* include/functions_agents.php, operation/tree.php,
	operation/agentes/ver_agente.php: some fixes for avoid PHP
	warnings.

2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events.build_table.php: Fixed the owner info